DateFormat Update with new results

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 *.log
 /311_Service_Request_Analysis/311dataset/311_Cleaned_Data_2019.csv
 /311_Service_Request_Analysis/311dataset/311_Cleaned_Data_2018.csv
+/311_Service_Request_Analysis/311dataset/311_Cleaned_Data_Small.csv
