Updated Final Run

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /311_Service_Request_Analysis/311dataset/311_Cleaned_Data_2019.csv
 /311_Service_Request_Analysis/311dataset/311_Cleaned_Data_2018.csv
 /311_Service_Request_Analysis/311dataset/final_nyc_311_df_supervised.csv
+/311_Service_Request_Analysis/results/Analysis/Supervised Learning/2019_Reference/Models/
+/311_Service_Request_Analysis/311dataset/311_Service_Requests_Full_2019.csv
